@@ -1,0 +1,2 @@
+set additional_flags "-ffast-math"
+return 0
