@@ -1,3 +1,10 @@
+2009-05-16  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR target/39501
+	* arm.md (movsfcc): Disable if not TARGET_HARD_FLOAT.
+	* testsuite/gcc.c-torture/execute/pr39501.c: New file.
+	* testsuite/gcc.c-torture/execute/pr39501.x: New file.
+
 2009-05-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
